# rust-esp32s3-t-embed

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
src/: main.rs
