[package]
name = "rust-esp32s3-t-embed"
version = "0.1.0"
authors = ["BARTHELEMY stephane"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = false    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.48", default-features = false }
esp-idf-sys = "0.34.1"
esp-idf-hal = {version = "0.43.1" , features= ["binstart"] }
embedded-svc = "0.27.1"
anyhow = "1.0.81"
embedded-graphics = "0.8.1"
display-interface-spi = "0.4.1"
mipidsi = "0.7.1"
rotary-encoder-hal = "0.5.0"

[build-dependencies]
embuild = "0.31.3"
